website/versioned_docs/version-2.15.x/reference/subsystems/docformatter.mdx
---
title: docformatter
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Python docformatter tool (https://github.com/myint/docformatter).

Backend: <span className="color--primary">`pants.backend.python.lint.docformatter`</span>

Config section: <span className="color--primary">`[docformatter]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]docformatter-skip`}
  env_repr="PANTS_DOCFORMATTER_SKIP"
  default_repr={`False`}
>
  If true, don&#x27;t use docformatter when running
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 fmt` and
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 lint`.
</Option>

### `args`

<Option
  cli_repr={`--docformatter-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_DOCFORMATTER_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to docformatter, e.g.
  `--docformatter-args='--wrap-summaries=100 --pre-summary-newline'`.
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--docformatter-version=<str>`}
  env_repr="PANTS_DOCFORMATTER_VERSION"
  default_repr={`docformatter>=1.4,<1.5`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--docformatter-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_DOCFORMATTER_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--docformatter-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_DOCFORMATTER_INTERPRETER_CONSTRAINTS"
  default_repr={`["CPython>=3.7,<4"]`}
>
  Python interpreter constraints for this tool.
</Option>

### `lockfile`

<Option
  cli_repr={`--docformatter-lockfile=<str>`}
  env_repr='PANTS_DOCFORMATTER_LOCKFILE'
  default_repr={`<default>`}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.15.2/src/python/pants/backend/python/lint/docformatter/docformatter.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds and supply-chain security.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 generate-lockfiles --resolve=docformatter`.

Alternatively, you can set this option to the path to a custom lockfile using pip&#x27;s requirements.txt-style, ideally with `--hash`. Set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

### `console_script`

<Option
  cli_repr={`--docformatter-console-script=<str>`}
  env_repr="PANTS_DOCFORMATTER_CONSOLE_SCRIPT"
  default_repr={`docformatter`}
>
  The console script for the tool. Using this option is generally preferable to
  (and mutually exclusive with) specifying an --entry-point since console script
  names have a higher expectation of staying stable across releases of the tool.
  Usually, you will not want to change this from the default.
</Option>

### `entry_point`

<Option
  cli_repr={`--docformatter-entry-point=<str>`}
  env_repr="PANTS_DOCFORMATTER_ENTRY_POINT"
  default_repr={`None`}
>
  The entry point for the tool. Generally you only want to use this option if
  the tool does not offer a --console-script (which this option is mutually
  exclusive with). Usually, you will not want to change this from the default.
</Option>

## Deprecated options

### `export`

<Option
  cli_repr={`--[no-]docformatter-export`}
  env_repr='PANTS_DOCFORMATTER_EXPORT'
  default_repr={`True`}
  removal_version='2.23.0.dev0'
  removal_hint={'Use the export goal\'s --resolve option to select tools to export, instead of using this option to exempt a tool from export-by-default.'}
>
If true, export a virtual environment with docformatter when running `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 export`.

This can be useful, for example, with IDE integrations to point your editor to the tool&#x27;s binary.

</Option>

</span>

